# drawmoon

./: README.md  README0.md  TypeScript 项目集成 Git 预提交钩子.md  开发环境 Linux 篇.md  开发环境 MacOS 篇.md  智能看板布局系统设计方案.md
_book/: README.md
_dev/: linux.md  macos.md
_example/: README.md
_example/src/python/: cache.py
_example/src/python/chat_exam/: main.py  pyproject.toml
_example/src/python/chatbob/: README.md  chat.spec  justfile  main.py  pyproject.toml
_template/src/py/py3_lib/: requirements_dev.txt
_template/src/py/py3_lib_uv/: justfile
_template/src/py/py3_lib_uv/pyparrot/: __main__.py
_template/src/py/pyparrot_web/: pyproject.toml
_template/src/py/pyparrot_web/pyparrot/: exception.py
_template/src/py/pyparrot_web/pyparrot/apis/v1/: parrot.py
_template/src/python/py3_lib_uv/: justfile  pyproject.toml
_template/src/python/pymodularlib/: justfile  pyproject.toml  pytest.ini
_template/src/python/pyparrot_web/: .gitlab-ci.yml
_template/src/python/webapi/webapi_fastapi/: pyproject.toml
_template/src/python/webapi/webapi_fastapi/simple/: __main__.py  serve.py
_template/src/typescript/webapi/webapi_express/: package.json  tsconfig.json
_template/src/typescript/webapi/webapi_nest/: package.json
_template/src/typescript/webapi/webapi_nest_with_fastify/: package.json
container/: docker.md  docker_compose.md  k3s_rancher.md  minikube.md
