[project]
name = "aiassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.1",
    "jinja2>=3.1.6",
    "langchain-openai>=0.3.24",
    "pyinstaller>=6.14.1",
    "ruff>=0.12.0",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
